--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>To Do List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>To do list</h1>
+    <button id="addButton" onclick="addItem()">+</button>
+    <div id="list"></div>
+    <div id="dataButtons">
+        <button id="saveButton" onclick="saveItems()">Save</button>
+        <button id="loadButton" onclick="loadItems()">Load</button>
+        <button id="clearButton" onclick="clearItems()">Clear</button>
+    </div>
+
+
     <script src="index.js"></script>
 </body>
 </html>
